--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[Your name]</title>
+    <meta name="description" content="my portfolio" />
+    <title>Front-end developer Nives</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/yoga.png" class="img-fluid rounded" alt="yoga" />
         </div>
         <div class="col-6">
           <h2 class="text-start mb-3">Yoga app</h2>
@@ -89,12 +89,12 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="images/weather.png" class="img-fluid rounded" id="small-photo" alt="weather" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img src="images/yogurt.png" class="img-fluid rounded" imag="yogurt" />
         </div>
         <div class="col-6">
           <h2 class="text-start mb-3">Yogurt app</h2>
