--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" alt="yoga" />
+        <div class="col-sm-6">
+          <img src="images/yoga.png" class="img-fluid rounded d-none d-sm-block" alt="yoga" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="text-start mb-3">Yoga app</h2>
           <p class="text-start">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="text-start mb-3">Weather app</h2>
           <p class="text-start">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -88,15 +88,15 @@
             <a href="#" class="primary-link">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" id="small-photo" alt="weather" />
+        <div class="col-sm-6">
+          <img src="images/weather.png" class="img-fluid rounded d-none d-sm-block" alt="weather" />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" imag="yogurt" />
+        <div class="col-sm-6">
+          <img src="images/yogurt.png" class="img-fluid rounded d-none d-sm-block" alt="yogurt" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="text-start mb-3">Yogurt app</h2>
           <p class="text-start">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
