--- a/about.html
+++ b/about.html
@@ -61,13 +61,13 @@
     <div class="container mb-5">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="yoga" />
+          <img src="images/yoga.png" class="img-fluid p-2 mb-4 shadow rounded" alt="yoga" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" alt="weather" />
+          <img src="images/weather.png" class="img-fluid p-2 mb-4 shadow rounded" alt="weather" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" alt="yogurt" />
+          <img src="images/yogurt.png" class="img-fluid p-2 mb-4 shadow rounded" alt="yogurt" />
         </div>
       </div>
     </div>
